--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
 
       - name: Write config file
         run: |
-          echo "module.exports = {
+          cat <<EOF > src/config.js
+          module.exports = {
             jwtSecret: '${{ secrets.JWT_SECRET }}',
             db: {
               connection: {
@@ -60,7 +61,33 @@ jobs:
               url: '${{ secrets.METRICS_URL }}',
               apiKey: '${{ secrets.METRICS_API_KEY }}',
             },
-          };" > src/config.js
+          };
+          EOF
+
+      # - name: Write config file
+      #   run: |
+      #     echo "module.exports = {
+      #       jwtSecret: '${{ secrets.JWT_SECRET }}',
+      #       db: {
+      #         connection: {
+      #           host: '127.0.0.1',
+      #           user: 'root',
+      #           password: 'tempdbpassword',
+      #           database: 'pizza',
+      #           connectTimeout: 60000,
+      #         },
+      #         listPerPage: 10,
+      #       },
+      #       factory: {
+      #         url: 'https://pizza-factory.cs329.click',
+      #         apiKey: '${{ secrets.FACTORY_API_KEY }}',
+      #       },
+      #       metrics: {
+      #         source: 'jwt-pizza-service',
+      #         url: '${{ secrets.METRICS_URL }}',
+      #         apiKey: '${{ secrets.METRICS_API_KEY }}',
+      #       },
+      #     };" > src/config.js
 
       - name: Tests
         run: npm test
