--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,36 +37,10 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Write config file
-        run: |
-          cat > src/config.js <<'EOF'
-          module.exports = {
-            jwtSecret: '${{ secrets.JWT_SECRET }}',
-            db: {
-              connection: {
-                host: '127.0.0.1',
-                user: 'root',
-                password: 'tempdbpassword',
-                database: 'pizza',
-                connectTimeout: 60000,
-              },
-              listPerPage: 10,
-            },
-            factory: {
-              url: 'https://pizza-factory.cs329.click',
-              apiKey: '${{ secrets.FACTORY_API_KEY }}',
-            },
-            metrics: {
-              source: 'jwt-pizza-service',
-              url: '${{ secrets.METRICS_URL }}',
-              apiKey: '${{ secrets.METRICS_API_KEY }}',
-            },
-          };
-          EOF
-
       # - name: Write config file
       #   run: |
-      #     echo "module.exports = {
+      #     cat > src/config.js <<'EOF'
+      #     module.exports = {
       #       jwtSecret: '${{ secrets.JWT_SECRET }}',
       #       db: {
       #         connection: {
@@ -87,7 +61,33 @@ jobs:
       #         url: '${{ secrets.METRICS_URL }}',
       #         apiKey: '${{ secrets.METRICS_API_KEY }}',
       #       },
-      #     };" > src/config.js
+      #     };
+      #     EOF
+
+      - name: Write config file
+        run: |
+          echo "module.exports = {
+            jwtSecret: '${{ secrets.JWT_SECRET }}',
+            db: {
+              connection: {
+                host: '127.0.0.1',
+                user: 'root',
+                password: 'tempdbpassword',
+                database: 'pizza',
+                connectTimeout: 60000,
+              },
+              listPerPage: 10,
+            },
+            factory: {
+              url: 'https://pizza-factory.cs329.click',
+              apiKey: '${{ secrets.FACTORY_API_KEY }}',
+            },
+            metrics: {
+              source: 'jwt-pizza-service',
+              url: '${{ secrets.METRICS_URL }}',
+              apiKey: '${{ secrets.METRICS_API_KEY }}',
+            },
+          };" > src/config.js
 
       - name: Tests
         run: npm test
