CI Pipeline Fix (setInterval JEST ERROR)

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
   "collectCoverage": true,
   "coverageReporters": ["json-summary", "text"],
-  "testEnvironment": "node"
+  "testEnvironment": "node",
+  "testPathIgnorePatterns": ["./src/metrics.js"]
 }
